[gd_scene load_steps=5 format=3 uid="uid://xrylq0ybq3p1"]

[ext_resource type="Texture2D" uid="uid://dq27vmev8iop" path="res://assets/sprites/squid_enemy.png" id="1_rao3x"]
[ext_resource type="Script" uid="uid://cmf7ao5yy8giu" path="res://actors/enemies/squid_enemy/squid_enemy.gd" id="1_rv8f2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rv8f2"]
size = Vector2(20, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64h3i"]
size = Vector2(20, 15)

[node name="SquidEnemy" type="CharacterBody2D"]
script = ExtResource("1_rv8f2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_rv8f2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_rao3x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_64h3i")

[node name="Timers" type="Node" parent="."]

[node name="MoveTimer" type="Timer" parent="Timers"]
wait_time = 0.75
one_shot = true
autostart = true

[node name="TeleportTimer" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="Timers/TeleportTimer" to="." method="_on_teleport_timer_timeout"]
